crawler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synergychat-crawler
  labels:
    app: synergychat-crawler
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: synergychat-crawler
  template:
    metadata:
      labels:
        app: synergychat-crawler
    spec:
      containers:

        - image: bootdotdev/synergychat-crawler:latest
          name: synergychat-crawler-1
          volumeMounts:
          - name: cache-volume
            mountPath: /cache

        - image: bootdotdev/synergychat-crawler:latest
          name: synergychat-crawler-2
          volumeMounts:
          - name: cache-volume
            mountPath: /cache

        - image: bootdotdev/synergychat-crawler:latest
          name: synergychat-crawler-3
          volumeMounts:
          - name: cache-volume
            mountPath: /cache
      volumes:
      - name: cache-volume    
        emptyDir: {}
