api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: synergychat-api
  type: NodePort
  ports:
  - port: 80
    nodePort: 30080
    targetPort: 8080 
    protocol: TCP
