web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: synergychat-web
  ports:
  - port: 80
    targetPort: 8080 
    protocol: TCP
