web-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-httproute
spec:
  parentRefs: 
    - name: app-gateway
  hostnames:
    - "synchat.internal"
  rules:
    - matches: 
      - path:
          type: PathPrefix
          value: /
      backendRefs: 
        - name: api-service
          port: 80
